# haskell-various

./: README.md
Haskell_Programming/ch02/: Exercises.hs
Haskell_Programming/ch03/: TopOrLocal.hs  print3.hs  reverse.hs
Haskell_Programming/ch04/: exercises.hs  greetIfCool1.hs  greetIfCool2.hs  moodSwing.hs
Haskell_Programming/ch05/: applyYourself.hs  arith3Broken.hs  exercises.hs  singing.hs  typeKwonDo.hs
Haskell_Programming/ch06/: dayOfWeek.hs  eqInstances.hs  exercises.hs
Haskell_Programming/ch07/: artfulDodgy.hs  casePractice.hs  exercises.hs  grabBag.hs  guardDuty.hs  registeredUser2.hs  varietyPack.hs
Haskell_Programming/ch08/: exercises.hs  intermission.hs
Haskell_Programming/ch09/: bottomMadness.hs  cipher.hs  eft.hs  exercises.hs  filtering.hs  moreBottoms.hs  squareCube.hs  zippingExercises.hs
Haskell_Programming/ch10/: databaseProcessing.hs  exercises.hs  scansExercises.hs  understandingFolds.hs
Haskell_Programming/ch11/: Cipher.hs  Exercises.hs  binaryTree.hs  cardinality.hs  dogTypes.hs  forExample.hs  howDoesYourGardenGrow.hs  logicGoats.hs  pityTheBool.hs  programmers.hs  theQuad.hs  vehicles.hs
Haskell_Programming/ch12/: Exercises.hs
Haskell_Programming/ch13/: Cipher.hs  MkPerson.hs  Palindrome.hs
Haskell_Programming/ch13/hangman/: hangman.cabal
Haskell_Programming/ch13/hello/: hello.cabal
Haskell_Programming/ch14/addition/: Addition.hs  addition.cabal
Haskell_Programming/ch14/arbitrary-instances/: README.md  arbitrary-instances.cabal
Haskell_Programming/ch14/arbitrary-instances/test/: Spec.hs
Haskell_Programming/ch14/exercises/: exercises.cabal
Haskell_Programming/ch14/exercises/src/: Arithmetic.hs  WordNumber.hs
Haskell_Programming/ch14/exercises/test/: CipherSpec.hs  Spec.hs  SpecQC.hs
Haskell_Programming/ch14/hangman/: hangman.cabal
Haskell_Programming/ch14/hangman/src/: Main.hs
Haskell_Programming/ch14/hangman/test/: Spec.hs
Haskell_Programming/ch14/morse/: LICENSE  morse.cabal
old-haskell-worth-tinkering-with/: Functions.hs  Matrix.hs  Mmult_efficient.hs  TypeConversions.hs  gcd_eu.hs  ghci-commands.txt  haskell-script.hs  matrix-sample.hs
old-haskell-worth-tinkering-with/Algorithms/: BayerPrimes.hs  ONeillPrimes.hs  Primes.hi  Primes.hs  another_prime.hs  fermat-test.hs  fib_iter.hs  fib_log.hs  fib_rec.hs  gcd_eu.hs  inplace  inplacesort.hi  inplacesort.hs  mergesort.hs  nsieve.hs  prime_it  quicksort.hs  randoms.hs  root2.hs  sieveBW  sieveBW.hi  sieveBW.hs  sieveST  sieveST.hc  sieveST.hi  sieveST.hs  sieve_better.hs  sieve_comparisons.txt  sieve_erat.hs  sieve_erat_again.hs
old-haskell-worth-tinkering-with/Algorithms.FP.Approach/: lisp.hs  simple_code.hs
old-haskell-worth-tinkering-with/Algorithms/haskell-primes/: AtkinSieve.hs  AtkinSieveTest.hs  (+32 more)
old-haskell-worth-tinkering-with/Casting.SPELS-Haskell/: AdventureGame.hs  AdventureGame.html  Utils.hs
old-haskell-worth-tinkering-with/Computational.Semantics-Functional/: CPSS.hs  DRAC.hs  EAI.hs  FSemF.hs  HRAS.hs  MCWPL.hs  Model.hs  Model2.hs  P.hs  SolCAIA.hs  SolCPSS.hs  SolDRAC.hs  SolEAI.hs  SolFPH.hs  SolFSemF.hs  SolFSynF.hs  SolHRAS.hs  SolMCWPL.hs  SolP.hs  SolTCOM.hs  TCOM.hs
old-haskell-worth-tinkering-with/Haskell.for.C/: fibs.hs  showtime.hs
old-haskell-worth-tinkering-with/Hasktut.from.Casting.SPELS/: tutorial.hs
old-haskell-worth-tinkering-with/Hitchhikers.Guide/: cd-fit.hs  exercise-1-1.hs  hello.hs
old-haskell-worth-tinkering-with/Learn.You.A/: #1-Starting_Out.lhs#  1-Basics.Lists.Tuples.hs  1-Starting_Out.aux  1-Starting_Out.dvi  1-Starting_Out.lhs  1-Starting_Out.lhs~  1-Starting_Out.tex  2-Types.Typeclasses.hs  3-Patterns.Guards.Where.Let.Case.hs  6-Modules.hs  7-Typeclasses.hs  8-IO.hs  Geometry.hs  baby.hs  function.sytax.hs  higher.order.functions.hs  lhstest.dvi  lhstest.lhs  lhstest.lhs~  lhstest.tex  recursion.hs  types.hs
old-haskell-worth-tinkering-with/MIT.Structure/: chapter1.hs  chapter1.scm  sigma.hs
old-haskell-worth-tinkering-with/ProjectEuler/: Problem057.hs
old-haskell-worth-tinkering-with/Real.World/: ghci-commands.txt  notes.txt  various-useful-functions.txt
old-haskell-worth-tinkering-with/Road.to.Logic/: GS.hs  primes.hs
old-haskell-worth-tinkering-with/YAHT/: Case.hs  Guess.hs  HelloWorld  HelloWorld.hi  HelloWorld.hs  Interactive.hs  Name.hs  Piecewise.hs  Quadratic.hs  Recursion.hs  Signum.hs  Test.hs  early-exercises.txt
old-haskell-worth-tinkering-with/monad_tutorials/: bob_lover.hs
old-haskell-worth-tinkering-with/other/: parallel  parallel.hi  parallel.hs
old-haskell-worth-tinkering-with/test/: hello
(+81 files in other folders)
