-- addition.cabal
name:          addition
version:       0.1.0.0
license-file:  LICENSE
author:        Lewis Cawthorne
maintainer:    LLC@acm.org
category:      Text
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:  Addition
  ghc-options:      -Wall -fwarn-tabs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends:    base >=4.7 && < 5
                  , hspec
                  , QuickCheck
