name:                arbitrary-instances
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/llcawthorne/arbitrary-instances#readme
license:             BSD3
license-file:        LICENSE
author:              Lewis Cawthorne
maintainer:          LLC@acm.org
copyright:           Copyright: (c) 2017 Lewis Cawthorne
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

executable arbitrary-instances
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , arbitrary-instances
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arbitrary-instances
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/llcawthorne/arbitrary-instances
