name:                exercises
version:             0.1.0.0
homepage:            https://github.com/llcawthorne/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Lewis Cawthorne
maintainer:          LLC@acm.org
copyright:           Copyright: (c) 2017 Lewis Cawthorne
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , WordNumber
                     , Arithmetic
                     , Cipher
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

executable exercises
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercises
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , exercises
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/llcawthorne/exercises
